Agregar por carpetas el html y js

--- a/paginasWeb/index.html
+++ b/paginasWeb/index.html
@@ -27,7 +27,7 @@
 
     </div>
     <script src="https://cdn.jsdelivr.net/npm/vue"></script>
-    <script type="text/javascript" src="./index.js"></script>
+    <script type="text/javascript" src="scriptJs/index.js"></script>
 </body>
 
 </html>
